--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A documentation site for @exoplay/exobot",
   "main": "index.js",
   "scripts": {
-    "build": "next build && next export docs",
+    "build": "next build && next export -o docs",
+    "buildonly": "next build",
     "dev": "next",
     "start": "next start"
   },
@@ -23,9 +24,23 @@
   "homepage": "https://github.com/exoplay/exobot-docs#readme",
   "dependencies": {
     "@exoplay/exobot": "^5.0.0-rc.6",
-    "@exoplay/exobot-build": "^1.0.0",
-    "next": "^3.0.0-beta3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "@exoplay/exobot-plugin-points": "^3.1.3",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "moment": "^2.18.1",
+    "next": "^3.0.0-beta8",
+    "precss": "^1.4.0",
+    "react-dom": "^15.5.4",
+    "react-syntax-highlighter": "^5.6.2",
+    "rebass": "^0.4.0-beta.9",
+    "reflexbox": "^2.2.3"
+  },
+  "devDependencies": {
+    "babel-preset-babili": "0.1.2",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babili": "0.1.2",
+    "send": "^0.15.3"
   }
 }
