--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@exoplay/exobot": "^5.0.0-rc.6",
     "@exoplay/exobot-plugin-points": "^3.1.3",
+    "babel-plugin-transform-define": "^1.3.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "moment": "^2.18.1",
