--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "moment": "^2.18.1",
-    "next": "^3.0.0-beta9",
-    "precss": "^1.4.0",
-    "react-dom": "^15.5.4",
+    "next": "^3.0.0-beta12",
+    "react": "^15.6.0-rc.1",
+    "react-dom": "^15.6.0-rc.1",
     "react-syntax-highlighter": "^5.6.2",
     "rebass": "^0.4.0-beta.9",
     "reflexbox": "^2.2.3"
